[gd_scene load_steps=4 format=2]

[ext_resource path="res://abstract-platformer-370-assets/PNG/Enemies/enemyWalking_4.png" type="Texture" id=1]
[ext_resource path="res://enemy/enemy1.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17, 21 )

[node name="KinematicBody2D" type="KinematicBody2D"]
position = Vector2( 1, -2 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 56, 30 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 56, 30 )
shape = SubResource( 1 )

[node name="PlatformDetector" type="RayCast2D" parent="."]
position = Vector2( 56, 39 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 9

[node name="FloorDetectorLeft" type="RayCast2D" parent="."]
position = Vector2( 40, 47 )
enabled = true

[node name="FloorDetectorRight" type="RayCast2D" parent="."]
position = Vector2( 73, 48 )
enabled = true
